# tts-asr-benchmark

./: .gitignore  README.md  non_streaming_benchmark.ipynb  non_streaming_benchmark.py  preprocess_despina.py  pyproject.toml  requirements.txt  save_hf_dataset_as_wav.py  sherpa_onnx_tts_generation.py  sherpa_onnx_zipformer_vi_benchmark.sh  streaming_benchmark.py  test.py  vosk_vn_with_server_benchmark.sh
app/: asr.py  main.py  schemas.py  tts.py
benchmark_output/sherpa-onnx/: vi_hypothesis.csv  vi_int8_hypothesis.csv  vi_int8_stats.txt  vi_stats.txt
benchmark_output/vosk/: vi_with_server.csv
demo/: index.html
vosk-server/docker/: Dockerfile.kaldi-vi
