[project]
name = "onnx-asr-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "ipywidgets>=8.1.8",
    "jiwer>=4.0.0",
    "jupyter>=1.1.1",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "torchcodec>=0.9.1",
    "vistreamasr>=0.1.3",
    "vosk>=0.3.45",
]
